# screen-analyzer

./: .gitignore  AGENTS.md  AI_DEV_CHECKLIST.md  CLAUDE.md  KNOWN_ISSUES.md  README.md  package-lock.json  package.json  vite.config.js  下一批修复计划.md  代码审查报告.md  技术路线说明.md  架构重构方案.md  重构进度报告.md
.claude/: settings.local.json
src/: App.vue  App.vue.bak  App.vue.original  main.js
src-tauri/: Cargo.toml  build.rs  config.example.json  entitlements.plist  tauri.conf.json
src-tauri/docs/: LLM_CONFIGURATION.md  LLM_PROVIDERS.md
src-tauri/resources/ffmpeg/: README.md
src-tauri/resources/ffmpeg/macos/: .gitkeep
src-tauri/resources/ffmpeg/windows/: .gitkeep
src-tauri/src/: app.rs  event_bus.rs  lib.rs  logger.rs  main.rs  settings.rs
src-tauri/src/actors/: capture_settings.rs  llm_manager.rs  mod.rs  system_status.rs
src-tauri/src/analysis/: mod.rs  session_processor.rs  video_analyzer.rs
src-tauri/src/capture/: mod.rs  scheduler.rs
src-tauri/src/commands/: config.rs  control.rs  mod.rs  notion.rs  query.rs  storage.rs  test.rs  video.rs
src-tauri/src/domains/: analysis.rs  capture.rs  mod.rs  storage.rs  summary.rs  system.rs
src-tauri/src/llm/: README.md  claude.rs  codex.rs  mod.rs  plugin.rs  qwen.rs
src-tauri/src/models/: mod.rs
src-tauri/src/notion/: client.rs  mod.rs
src-tauri/src/storage/: cache.rs  cleaner.rs  config.rs  database.rs  mod.rs  models.rs
src-tauri/src/storage/repository/: mariadb.rs  mod.rs  sqlite.rs
src-tauri/src/utils/: file_system.rs  mod.rs  proxy.rs  validation.rs  video_parser.rs
src-tauri/src/video/: ffmpeg_helper.rs  mod.rs  processor.rs
src/components/: ActivityListView.vue  ActivitySummary.vue  AddTagDialog.vue  CalendarView.vue  SessionDetail.vue  SettingsDialog.vue  SummaryView.vue  TagManager.vue  TimelineView.vue
src/components/icons/: OSIcons.vue
src/stores/: activity.js
