[package]
name = "screen-analyzer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "screen_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 添加我们需要的依赖
tokio = { version = "1", features = ["full"] }
screenshots = "0.8.10"
image = "0.24"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "mysql", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
claude-agent-sdk = { version = "0.1", features = ["http"] }
async-trait = "0.1"
base64 = "0.22"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time"] }
cron = "0.12"  # 定时任务
uuid = { version = "1.0", features = ["v4"] }  # 生成唯一ID
tracing-appender = "0.2.3"
time = { version = "0.3.44", features = ["formatting", "local-offset", "macros"] }
whoami = "1.4"  # 获取设备信息
tempfile = "3.23.0"  # macOS 截图需要临时文件
sysinfo = "0.31"  # 获取系统信息（CPU、内存等）
regex = "1"  # 正则表达式（用于时间格式转换）

[target.'cfg(windows)'.dependencies]
winreg = "0.52"  # Windows 注册表访问（用于获取系统代理）

[dev-dependencies]
